Make sure the channel list button stays always visible

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -470,7 +470,13 @@ kbd {
 	width: 36px;
 }
 
+/* Channel list button stays fixed when scrolling... */
 #viewport .lt {
+	position: fixed;
+}
+
+/* ... Except on chat windows, relative to include the notification dot */
+#viewport #chat .lt {
 	position: relative;
 }
 
@@ -2284,6 +2290,11 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 	#viewport .lt,
 	#viewport .channel .rt {
 		display: flex;
+	}
+
+	/* On mobile display, channel list button stays at the top */
+	#viewport .lt {
+		position: relative;
 	}
 
 	#chat .userlist {
